--- a/waybar/colors-waybar.css
+++ b/waybar/colors-waybar.css
@@ -1,20 +1,20 @@
-@define-color foreground #dedede;
-@define-color background #000000;
-@define-color cursor #dedede;
+@define-color foreground #dfcad2;
+@define-color background #0a080a;
+@define-color cursor #dfcad2;
 
-@define-color color0 #000000;
-@define-color color1 #6C6C6C;
-@define-color color2 #6E6E6E;
-@define-color color3 #707070;
-@define-color color4 #757575;
-@define-color color5 #8E8E8E;
-@define-color color6 #AFAFAF;
-@define-color color7 #dedede;
-@define-color color8 #9b9b9b;
-@define-color color9 #6C6C6C;
-@define-color color10 #6E6E6E;
-@define-color color11 #707070;
-@define-color color12 #757575;
-@define-color color13 #8E8E8E;
-@define-color color14 #AFAFAF;
-@define-color color15 #dedede;
+@define-color color0 #0a080a;
+@define-color color1 #2B4A6B;
+@define-color color2 #59465F;
+@define-color color3 #B43938;
+@define-color color4 #4D5F94;
+@define-color color5 #AF6F99;
+@define-color color6 #8F9796;
+@define-color color7 #dfcad2;
+@define-color color8 #9c8d93;
+@define-color color9 #2B4A6B;
+@define-color color10 #59465F;
+@define-color color11 #B43938;
+@define-color color12 #4D5F94;
+@define-color color13 #AF6F99;
+@define-color color14 #8F9796;
+@define-color color15 #dfcad2;
