--- a/waybar/style.css
+++ b/waybar/style.css
@@ -52,6 +52,12 @@ tooltip {
     background-color: #e78a4e;
 }
 
+#workspaces {
+    background-color: #303536;
+    border: 2px solid #434a4c;
+    color: #d4be98;
+    padding-right: 5px;
+}
 #clock {
     background-color: #303536;
     border: 2px solid #434a4c;
